// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test companies data retrieval should get 2 companies from db 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": "0",
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1151",
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
    Object {
      "apartment": "27",
      "blok": "1",
      "bulstat": "130988423",
      "car_ids": null,
      "city": "СОФИЯ",
      "client_name": "\\" Мечкуеви Ко \\" ООД  ",
      "floor": "2",
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1000",
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "Незабравка",
      "street_no": "1",
      "vhod": "Б",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get a company from db 1`] = `
Object {
  "data": Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "175153616",
    "car_ids": Array [
      6001,
      1687957,
      1863595,
    ],
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": "0",
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": "1151",
    "region_name": "София (столица)",
    "representative": "Генади Стефанов Бонев",
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vhod": "0",
  },
}
`;

exports[`Test companies data retrieval should get companies from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": "0",
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": "1000",
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": "0",
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1151",
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get companies from db with sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": "0",
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": "1000",
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": "0",
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1151",
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;
